[tool.poetry]
name = "langdspy"
version = "0.0.1"
description = "Langchain implementation of Stanford's DSPy"
authors = ["Amir Elaguizy <aelaguiz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aelaguiz/langdspy"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anthropic = "0.19.1"
anyio = "4.2.0"
attrs = "23.2.0"
build = "1.1.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
coverage = "7.4.3"
crashtest = "0.4.1"
dataclasses-json = "0.6.4"
defusedxml = "0.7.1"
dill = "0.3.8"
distlib = "0.3.8"
distro = "1.9.0"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
frozenlist = "1.4.1"
fsspec = "2024.2.0"
h11 = "0.14.0"
httpcore = "1.0.3"
httpx = "0.26.0"
huggingface-hub = "0.21.4"
idna = "3.6"
importlib-metadata = "7.0.2"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.3.1"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
keyring = "24.3.1"
langchain = "^0.1.11"
langchain-anthropic = "^0.1.3"
langchain-community = "^0.0.20"
langchain-core = "^0.1.23"
langchain-openai = "^0.0.6"
markdown-it-py = "3.0.0"
marshmallow = "3.20.2"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.12.0"
orjson = "3.9.15"
packaging = "23.2"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
pluggy = "1.4.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
pygments = "2.17.2"
pyproject-hooks = "1.0.0"
pytest = "8.0.2"
pytest-cov = "4.1.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
rapidfuzz = "3.6.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.0"
scikit-learn = "1.4.1.post1"
scipy = "1.12.0"
shellingham = "1.5.4"
sniffio = "1.3.0"
sqlalchemy = "2.0.27"
tenacity = "8.2.3"
threadpoolctl = "3.3.0"
tiktoken = "0.6.0"
tokenizers = "0.15.2"
tomlkit = "0.12.4"
tqdm = "4.66.2"
trove-classifiers = "2024.3.3"
typing-inspect = "0.9.0"
typing-extensions = "4.9.0"
urllib3 = "2.2.0"
virtualenv = "20.25.1"
xattr = "1.1.0"
yarl = "1.9.4"
zipp = "3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
coverage = "scripts:coverage"
